@@ -6,8 +6,6 @@ import org.junit.jupiter.api.Test;
 import java.util.Arrays;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.*;
-
 // * file1.txt (size: 100)
 // * file2.txt (size: 200) in collection "collection1"
 // * file3.txt (size: 200) in collection "collection1"
@@ -19,11 +17,11 @@ class FileSystemReporterTest {
 
     List<File> files = Arrays.asList(
             new File("file1.txt", 100),
-            new File("file2.txt", 200, Arrays.asList("collection1")),
-            new File("file3.txt", 200, Arrays.asList("collection1")),
-            new File("file4.txt", 300, Arrays.asList("collection2")),
+            new File("file2.txt", 200, List.of("collection1")),
+            new File("file3.txt", 200, List.of("collection1")),
+            new File("file4.txt", 300, List.of("collection2")),
             new File("file5.txt", 10),
-            new File("file6.txt", 100, Arrays.asList("collection2")),
+            new File("file6.txt", 100, List.of("collection2")),
             new File("file7.txt", 150, Arrays.asList("collection3", "collection1", "collection2"))
     );
 
@@ -34,7 +32,7 @@ class FileSystemReporterTest {
 
     @Test
     void topNCollections() {
-        Assertions.assertEquals(Arrays.asList("collection1"), fileStorage.topNCollections(files, 1));
+        Assertions.assertEquals(List.of("collection1"), fileStorage.topNCollections(files, 1));
         Assertions.assertEquals(Arrays.asList("collection1", "collection2"),
                 fileStorage.topNCollections(files, 2));
         Assertions.assertEquals(Arrays.asList("collection1", "collection2", "collection3"),
